# Flight-Software

./: .clang_complete  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  clean_builds.bat  clean_builds.sh  clean_host_builds.sh  clean_msp430_builds.sh  create_solutions.ps1  eps.c  eps.cpp  eps.h  eps_internals.h  fix_warning.diff  flash.bat  licenses.txt
.circleci/images/primary/: Dockerfile
.jxbrowser-data/: Visited Links
.jxbrowser-data/Cache/: data_0  data_1  data_2  f_000002  f_000004  f_000007  index
.jxbrowser-data/GPUCache/: index
.jxbrowser-data/Local Storage - EXT/: file_null.localstorage
.metadata/: version.ini
.metadata/.plugins/com.ti.ccstudio.builddefinitions.generator/6.2.0/: MSP430_4.4.xml
.metadata/.plugins/com.ti.ccstudio.builddefinitions.generator/7.4.0/: MSP430_4.4.xml
.metadata/.plugins/com.ti.dvt.datamodel/: SolutionMgr.xml
.metadata/.plugins/org.eclipse.cdt.core/: VT_Build_System.1524940579935.pdom
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
CCS/.circleci/: config.yml
CCS/.jxbrowser-data/: History
CCS/.jxbrowser-data/Cache/: data_1  f_000006  index
CCS/.jxbrowser-data/GPUCache/: data_1
CCS/.jxbrowser-data/Local Storage/: https_www.youtube-nocookie.com_0.localstorage
CCS/.metadata/: version.ini
CCS/.metadata/.plugins/org.eclipse.cdt.core/: Sensor_board_5969.1524549042717.pdom
CCS/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
CCS/Sensor_board_5969/: .ccsproject  .cproject  .project  FreeRTOSConfig.h  global_defines.h  lnk_msp430f5438a.cmd  main.c  pinav_task.c  pinav_task.h
CCS/Sensor_board_5969/Radio_board_5438A/: .gitignore  VT_Build_System.map  VT_Build_System_linkInfo.xml  ccsObjs.opt  main.d  makefile  objects.mk  sources.mk  subdir_rules.mk  subdir_vars.mk
CCS/Sensor_board_5969/Sensor_board_5994/: VT_Build_System.map  VT_Build_System.out  VT_Build_System.txt  VT_Build_System_linkInfo.xml  ccsObjs.opt  main.d  makefile  sources.mk  subdir_rules.mk
CCS/Sensor_board_5969/Sensor_board_5994/CCS_Only/: subdir_rules.mk
CCS/Sensor_board_5969/Sensor_board_5994/FreeRTOS_Source/: croutine.d  event_groups.d  list.d  queue.d  stream_buffer.d  subdir_rules.mk  subdir_vars.mk  tasks.d  timers.d
CCS/Sensor_board_5969/Sensor_board_5994/hal/: gpio_native.d  i2c.d  imu.d  mmc.d  spi.d  subdir_rules.mk  subdir_vars.mk  uart.d
CCS/Sensor_board_5969/driverlib/MSP430F5xx_6xx/: CMakeLists.txt
CCS/Sensor_board_5969/hal/: gpio.h  i2c.h  i2c_native.h  mmc.c  spi.c  spi_native.h  uart.c  uart.h  uart_eusci_native.c  uart_native.h
CCS/Sensor_board_5969/hal/hal_eusci/: uart_eusci_native.c  usci_includes.h
CCS/Sensor_board_5969/hal/hal_usci/: i2c_usci_native.c  spi_usci_native.c  spi_usci_native.h  uart_usci_native.c  uart_usci_native.h  usci.h  usci_includes.h  usci_native.h
Sensor_board_5969/: .cproject  .project  main.c
Sensor_board_5969/Large_Data/: LEDs.d  RTOSDemo.map  RTOSDemo_linkInfo.xml  Sensor_board_5969.map  Sensor_board_5969.out  Sensor_board_5969.txt  Sensor_board_5969_linkInfo.xml  ccsObjs.opt  main.d  printf-stdarg.d
Sensor_board_5969/Large_Data/Blinky_Demo/: main_blinky.d
Sensor_board_5969/Large_Data/FreeRTOS_Source/: croutine.d  event_groups.d  list.d  queue.d  stream_buffer.d  subdir_rules.mk  tasks.d  timers.d
Sensor_board_5969/Large_Data/Full_Demo/: Sample-CLI-commands.d  UARTCommandConsole.d  main_full.d  serial.d
Sensor_board_5969/Large_Data/Full_Demo/FreeRTOS+CLI/: FreeRTOS_CLI.d
Sensor_board_5969/Large_Data/Full_Demo/Standard_Demo_Tasks/: EventGroupsDemo.d  GenQTest.d  TaskNotify.d  blocktim.d  countsem.d  dynamic.d  recmutex.d  subdir_rules.mk
Sensor_board_5969/Large_Data/board_common/common/: spi.d  subdir_rules.mk  uart.d
Sensor_board_5969/Large_Data/driverlib/MSP430FR5xx_6xx/: adc12_b.d  aes256.d  comp_e.d  crc.d  crc32.d  cs.d  dma.d  esi.d  eusci_a_spi.d  eusci_a_uart.d  eusci_b_i2c.d  eusci_b_spi.d  gpio.d  (+16 more)
Sensor_board_5969/board_common/common/: spi.c  spi.h  uart.c  uart.h
Sensor_board_5969/hal/: eusci.h  gpio_native.c  gpio_native.h  i2c_eusci_native.c  i2c_native.h  imu.c  mmc_internal.h  spi.h  spi_eusci_native.c  spi_native.h  uart_eusci_native.h
VTCubeSat/: DataManagement.c  DataManagement.h  list.h
backend_code/: app.js
board_common/: CMakeLists.txt
board_common/common/: CMakeLists.txt  antenna.c  antenna.h  eps.c  gpio.h  i2c.c  i2c.h  imu.c  imu.h  imu_internal.h  mmc.c  mmc.h  rfm.c  rfm.h  rfm_internal.h  ring_buffer.c  ring_buffer.h  spi.c  spi.h  uart.c  uart.h
board_common/native/: CMakeLists.txt  eusci.h  eusci_native.h  i2c_eusci_native.c  i2c_eusci_native.h  i2c_native.h  i2c_usci_native.c  i2c_usci_native.h  spi_eusci_native.c  spi_eusci_native.h  spi_native.h  spi_usci_native.c  spi_usci_native.h  uart_eusci_native.c  uart_eusci_native.h  uart_native.h  uart_usci_native.c  uart_usci_native.h  usci.h  usci_native.h
board_common/test/: CMakeLists.txt  gpio.cpp  i2c.cpp  rfm.cpp  ring_buffer.cpp  spi.cpp  uart.cpp
board_common/test/impl/: gpio_test.cpp  gpio_test.hpp  i2c_test.cpp  i2c_test.hpp  spi_test.cpp  spi_test.hpp  uart.cpp  uart.hpp  uart_test.cpp  uart_test.hpp
cmake/: usip_macros.cmake
cmake/custom_toolchains/: msp430.cmake
data_board/: CMakeLists.txt  build.sh
data_board/common/: CMakeLists.txt  lithium.c  lithium.h  lithium_internal.h  rfm.c  rfm.h  rfm_internal.h
data_board/native/: CMakeLists.txt
data_board/test/: CMakeLists.txt  lithium.cpp  rfm.cpp
dev_board/: CMakeLists.txt  build.sh
dev_board/common/: CMakeLists.txt  pinav_parser.c
dev_board/native/: CMakeLists.txt  gpio.c  main.c
dev_board/test/: CMakeLists.txt
sensor_board/: CMakeLists.txt  build.sh
sensor_board/common/: CMakeLists.txt  gcd.c  pinav_parser.c  pinav_parser.h
sensor_board/native/: CMakeLists.txt
sensor_board/test/: CMakeLists.txt  gcd.cpp  test_pinav_parser.cpp
(+200 files in other folders)
